feat: expande opcoes de configuracoes pessoais
